[package]
authors = []
description = ""
edition = "2024"
license = ""
name = "maestro-headless"
repository = ""


[dependencies]

dioxus = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }

async-std = "1.13.0"
tailwind_fuse = { workspace = true }

tracing-wasm = { version = "0.2.1", optional = true }
web-sys = { version = "0.3.77", features = [
  "CssStyleDeclaration",
  "Document",
  "HtmlImageElement",
  "MutationObserver",
  "MutationObserverInit",
  "MutationRecord",
  "NodeFilter",
  "Performance",
  "TreeWalker",
  "Window",
] }

[features]
default = []
web = ["dep:tracing-wasm", "dioxus/web", "uuid/js"]
