[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "maestro-headless"
repository = { workspace = true }


[dependencies]

dioxus = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }

async-std = "1.13.1"
tailwind_fuse = { workspace = true }

tracing-wasm = { version = "0.2.1", optional = true }
web-sys = { version = "0.3.77", features = [
  "CssStyleDeclaration",
  "Document",
  "HtmlImageElement",
  "MutationObserver",
  "MutationObserverInit",
  "MutationRecord",
  "NodeFilter",
  "Performance",
  "TreeWalker",
  "Window",
] }

[features]
default = []
web = ["dep:tracing-wasm", "dioxus/web", "uuid/js"]
