[package]
authors = []
description = ""
edition = "2021"
license = ""
name = "maestro-hooks"
repository = ""


[dependencies]
bon = { workspace = true, features = ["experimental-getter", "implied-bounds"] }
chrono = { workspace = true }
maestro-toast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.19", features = ["derive"] }

itertools = { version = "0.13.0" }

dioxus = { version = "0.6.1", features = ["fullstack", "router"] }
dioxus-free-icons = { version = "0.9.0", features = ["font-awesome-solid", "ionicons"] }
dioxus-lib = { version = "0.6.1", default-features = false, features = ["hooks", "macro", "signals"] }
dioxus-logger = "0.6.1"
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk.git", features = [] }

futures = "0.3.31"
tailwind_fuse = "0.3.1"

copypasta = { version = "0.10.1", optional = true }
tracing-wasm = { version = "0.2.1", optional = true }
wasm-bindgen-futures = { version = "0.4.49", optional = true }
web-sys = { version = "0.3.76", features = ["Clipboard", "Navigator", "Window"], optional = true }


[features]
default = []
desktop = ["dep:copypasta", "dioxus/desktop"]
web = ["chrono/wasmbind", "dep:tracing-wasm", "dep:wasm-bindgen-futures", "dep:web-sys", "dioxus/web", "uuid/js"]
