[package]
authors = []
description = ""
edition = "2021"
license = ""
name = "maestro-hooks"
repository = ""


[dependencies]
bon = { workspace = true, features = ["experimental-getter", "implied-bounds"] }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maestro-toast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

dioxus = { workspace = true }
dioxus-free-icons = { workspace = true }
dioxus-lib = { version = "0.6.1", default-features = false, features = ["hooks", "macro", "signals"] }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }
tailwind_fuse = { workspace = true }

copypasta = { version = "0.10.1", optional = true }
tracing-wasm = { version = "0.2.1", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
web-sys = { version = "0.3.76", features = ["Clipboard", "Navigator", "Window"], optional = true }


[features]
default = ["web"]
desktop = ["dep:copypasta", "dioxus/desktop"]
web = ["chrono/wasmbind", "dep:tracing-wasm", "dep:wasm-bindgen-futures", "dep:web-sys", "dioxus/web", "uuid/js"]
