[package]
authors = []
description = ""
edition = "2021"
license = ""
name = "maestro-plotters"
repository = ""


[dependencies]
bon = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maestro-toast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

dioxus = { workspace = true }
dioxus-free-icons = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }

markdown-to-html = "0.1.3"
plotters = { version = "0.3.7", default-features = false, features = [
  "bitmap_backend",
  "bitmap_encoder",
  "bitmap_gif",
  "chrono",
  "svg_backend",
  "all_elements",
  "all_series",
  "colormaps",
  "deprecated_items",
  "full_palette",
  "image",
] } 
plotters-backend = { version = "0.3.7" }
plotters-canvas = { version = "0.3.0" }

tailwind_fuse = { workspace = true }

tracing-wasm = { version = "0.2.1", optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }
wasm-bindgen-futures = { version = "0.4.49", optional = true }
web-sys = { version = "0.3.76", features = ["Clipboard", "Navigator", "Window"], optional = true }


[features]
default = []
desktop = ["dioxus/desktop"]
web = ["chrono/wasmbind", "dep:tracing-wasm", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dioxus/web", "uuid/js"]
